kubernetes/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app.kubernetes.io/name: django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: djangogit
    spec:
      containers:
        - name: django
          image: docker.io/library/django_app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
