kubernetes/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app
  labels:
    app.kubernetes.io/name: django-deployment
spec:
  selector:
    app: django
  ports:
    - name: http-server
      protocol: TCP
      port: 80
      targetPort: 80
