kubernetes/starburger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: starburger.test
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: django-app
                port:
                  number: 80
